fixed alignments

--- a/src/styles/components/flop-stats.scss
+++ b/src/styles/components/flop-stats.scss
@@ -75,11 +75,11 @@
       &-slider {
         display: flex;
         flex-direction: column;
-        align-items: center;
-        justify-content: center;
+        align-items: flex-start;
+        justify-content: flex-start;
 
         & > span {
-          margin-bottom: 15px;
+          margin-bottom: 35px;
           width: 100%;
           text-align: center;
         }
@@ -114,7 +114,7 @@
   }
 
   &-board {
-    width: 100px;
+    width: 70px;
     display: flex;
     align-items: center;
     justify-content: flex-start;
